--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
-
+    volumes:
+      - ./back:/app
     depends_on:
       - db
 
@@ -28,10 +29,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-
+    volumes:
+      - ./front/src:/app/src
     depends_on:
       - back
 
 volumes:
   utn:
-
